--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
    <head>
+      <script src="https://kit.fontawesome.com/838c69e0dc.js" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
       <script src="script.js"></script>
    </head>
    <body>
    </body>
+  
+   <p><i class="fa-solid fa-cloud"></i> Weather</p>
+  
 </html>
