We did the final project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
    <head>
-      <script src="https://kit.fontawesome.com/838c69e0dc.js" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+      <script src="classes.js"></script>
       <script src="script.js"></script>
    </head>
    <body>
+      <div id="cellCounters">
+         <p id="empty"></p>
+         <p id="grass"></p>
+         <p id="grassEater"></p>
+      </div><br>
+      <div id="extra">
+         <p id="timer"></p>
+         <p id="weather"></p>
+         <p id="weathertime"></p>
+    
+      </div>
    </body>
-  
-   <p><i class="fa-solid fa-cloud"></i> Weather</p>
-  
 </html>
