--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
    <head>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-      <script src="classes.js"></script>
       <script src="script.js"></script>
+      <script src="http://localhost:3000/socket.io/socket.io.js"></script>
    </head>
+   
    <body>
       <div id="cellCounters">
          <p id="empty"></p>
